# profiling

./: .gitignore  MEMORY.md  README.md  app.py  main.py  pyproject.toml  report.md
profiling/: __init__.py  analyzer.py  cli.py  config.py  formatter.py  utils.py
profiling/fetchers/: __init__.py  arctic_shift.py  base.py  old_reddit.py  pullpush.py
src/: analyzer.py  cli.py  config.py  formatter.py  utils.py
src/fetchers/: __init__.py  arctic_shift.py  old_reddit.py  pullpush.py
static/: index.html
static/css/: styles.css
static/js/: app.js  charts.js
tests/: __init__.py  test_analyzer.py  test_server.py  test_utils.py
