[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "profiling"
version = "0.1.0"
description = "Reddit Public Activity Analyser"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "scrapling[all]>=0.4.10",
    "uvicorn>=0.51.0",
]

[project.scripts]
profiling = "profiling.cli:main"

[tool.setuptools]
packages = ["profiling", "profiling.fetchers"]
